# le-controlleur

./: .gitignore  CMakeLists.txt  MIDI2CV.md  README.md  SEQUENCER.md  build-firmware.sh  le-controlleur-pico-2.uf2  le-controlleur-pico.uf2  update-sdk.sh
src/: app-controller.cpp  app-controller.h  basic-midi2cv.cpp  basic-midi2cv.h  debug-log.h  main.cpp  midi-to-cv-engine.cpp  midi-to-cv-engine.h  sequencer-engine.cpp  sequencer-engine.h  settings-storage.cpp  settings-storage.h
tests/: CMakeLists.txt  settings-storage-test-helpers.h  test_settings_storage_defaults.cpp  test_settings_storage_deferred_commit.cpp  test_settings_storage_loads_v1.cpp  test_settings_storage_loads_v2.cpp  test_settings_storage_loads_v4.cpp  test_settings_storage_validation.cpp
tests/mocks/: storage-mock.cpp  storage-mock.h
tests/mocks/brain/include/: storage.h
